kubernates/echo-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-backend
  template:
    metadata:
      labels:
        app: echo-backend
    spec:
      containers:
        - name: echo-server
          image: grpc-istio-test:latest
          args: ["--id=t2.1"]
          ports:
            - containerPort: 4004
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-frontend
  template:
    metadata:
      labels:
        app: echo-frontend
    spec:
      containers:
        - name: echo-server
          args: ["--id=t1.1", "--backend_url=echo-backend-service:4004"]
          image: grpc-istio-test:latest
          ports:
            - containerPort: 4004
          imagePullPolicy: Never
