kubernates/services.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-grpc-istio-test
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: echo-frontend-service
  namespace: k8s-grpc-istio-test
spec:
  selector:
    app: echo-frontend
  ports:
    - name: grpc
      port: 4004
      targetPort: 4004
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: echo-backend-service
  namespace: k8s-grpc-istio-test
spec:
  selector:
    app: echo-backend
  ports:
    - name: grpc
      port: 4004
      targetPort: 4004
