kubernates/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echo-backend-service-sets
  namespace: k8s-grpc-istio-test
spec:
  host: echo-backend-service
  subsets:
    - name: g1
      labels:
        group: g1
    - name: g2
      labels:
        group: g2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo-weights
  namespace: k8s-grpc-istio-test
spec:
  hosts:
    - echo-backend-service
  http:
    - route:
        - destination:
            host: echo-backend-service
            subset: g1
          weight: 90
        - destination:
            host: echo-backend-service
            subset: g2
          weight: 10
