kubernates/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: bazel/src-server:echo_server_image
          ports:
            - containerPort: 4004
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server-service
spec:
  selector:
    app: echo-server
  ports:
    - name: grpc
      port: 4004
      targetPort: 4004
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server-service
                port:
                  number: 4004
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-server-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - echo-server-gateway
  http:
    - match:
        - port: 4004
      route:
        - destination:
            host: echo-server
            port:
              number: 4004
